<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contacts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ShoppingListFragment">

    <hu.bme.aut.android.sharedshoppinglist.util.LCEERecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.nambimobile.widgets.efab.ExpandableFabLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.nambimobile.widgets.efab.Overlay
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:overlay_orientation="portrait" />

        <com.nambimobile.widgets.efab.ExpandableFab
            android:id="@+id/fabExpandable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:tooltipText="@string/fab_content_desc"
            app:efab_icon="@drawable/ic_baseline_add_24"
            app:efab_orientation="portrait" />

        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/fabOptionJoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_baseline_add_link_24"
            app:fab_orientation="portrait"
            app:label_text="@string/fab_join_label" />

        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/fabOptionCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_baseline_add_shopping_cart_24"
            app:fab_orientation="portrait"
            app:label_text="@string/fab_create_label" />

    </com.nambimobile.widgets.efab.ExpandableFabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>